# efficient_tether_parameterization

./: README.md
catenary_checker/: CMakeLists.txt  package.xml
catenary_checker/include/catenary_checker/: 2d_projection.hpp  bisection_catenary_3D.h  catenary.hpp  catenary_checker.hpp  catenary_checker_manager.h  catenary_checker_node.h  check_collision_path_planner.h  convex_hull.hpp  get_tether_parameter.hpp  grid3d.hpp  near_neighbor.hpp  obstacle_2d.hpp  parabola.hpp  point_2d.hpp  point_3d.hpp  preprocessed_scenario.hpp  scenario.hpp  solve_catenary_correction_parameter.hpp  solve_catenary_parameter.hpp  solve_parabola_correction_parameter.hpp  solve_parabola_correction_parameter0.hpp  solve_parabola_correction_parameter1.hpp  solve_parabola_correction_parameter3.hpp  solve_parabola_parameter.hpp
catenary_checker/launch/: test.launch  test_preprocessed_scenario.launch  test_scenario.launch
catenary_checker/scripts/: error_summary_byLength.txt  plot_and_get_avg_errors_parabola_vs_catenary.py  publish_pose.sh  statistical_analysis_for_byLength_and_byFitting.py
catenary_checker/scripts/original_maths/: aprox_catenary.py  solver.py  twoD_obstacles.py
catenary_checker/scripts/original_maths/results/: cat_search_data.csv
catenary_checker/src/: 2d_projection.cpp  bisection_catenary_3D.cpp  catenary.cpp  catenary_checker.cpp  catenary_checker_manager.cpp  catenary_checker_manager_node.cpp  catenary_checker_node.cpp  check_collision_path_planner.cpp  convex_hull.cpp  create_grid3d_node.cpp  obstacle_2d.cpp  parabola.cpp  preprocessed_scenario.cpp  scenario.cpp  solve_catenary_correction_parameter.cpp  solve_catenary_parameter.cpp  solve_parabola_correction_parameter.cpp  solve_parabola_correction_parameter0.cpp  solve_parabola_parameter.cpp  test_catenary_checker.cpp  test_catenary_fit.cpp  test_ensuring_collision_free_catenary.cpp  test_preprocessed_scenario.cpp  test_scenario.cpp
catenary_checker/viz/: catenary_checker.rviz
marsupial_optimizer/cfg/: stage_3.yaml
marsupial_optimizer/launch/: planner_and_optimizer.launch  trajectory_planner.launch
marsupial_optimizer/maps/: teatro_obstacle.bt
marsupial_optimizer/script/: results_management_optimizery.py
marsupial_optimizer/src/: optimizer_local_planner.cc
marsupial_optimizer/trees/: stage_only_one_goal.xml
marsupial_optimizer/trees/resources/: stage_3_goals.yaml  stage_6_goals.yaml
marsupial_optimizer/trees/script/: comparing_graph_parabola_and_catenary.m
