cmake_minimum_required(VERSION 3.0.2)
project(catenary_checker)

## Compile as C++11, supported in ROS Kinetic and newer
#add_compile_options(-fopenmp)
add_compile_options(-std=c++17 -fPIC -O3 -march=native -mtune=native -mavx -mavx2 -mfma -fopenmp-simd)
add_link_options(-fopenmp-simd)

set(CMAKE_BUILD_TYPE Release)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  pcl_conversions
  pcl_ros
  sensor_msgs
  octomap_msgs
  octomap_ros
  )

find_package(Qt5 REQUIRED COMPONENTS
  Charts
  Widgets
  )

find_package(Qt5Charts REQUIRED)
find_package(Ceres REQUIRED)


find_package(PCL 1.8 REQUIRED)
find_package(PCL REQUIRED)
find_package(yaml-cpp REQUIRED)

# OpenMP library
find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
  message(STATUS "OPENMP FOUND")
  set(OpenMP_FLAGS ${OpenMP_CXX_FLAGS})  # or if you use C: ${OpenMP_C_FLAGS}
  set(OpenMP_LIBS gomp)
endif()

include_directories( include/
  ${catkin_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
  ${Qt5Charts_INCLUDE_DIRS}
  ${yaml-cpp_INCLUDE_DIRS}
  ${CERES_INCLUDE_DIRS}
)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
 
set(EXTERNAL_INCLUDE_DIRS ${PCL_INCLUDE_DIRS} )
set(EXTERNAL_LIBS ${PCL_LIBRARIES} ${yaml-cpp_LIBRARIES})

if (BUILD_SHARED_LIBS)
  remove_definitions(-DCERES_BUILDING_SHARED_LIBRARY)
endif()


###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if your package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
  INCLUDE_DIRS include
#  LIBRARIES catenary_checker
  CATKIN_DEPENDS pcl_conversions pcl_ros sensor_msgs octomap_msgs octomap_ros
  DEPENDS dbscan_line
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
  ${catkin_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
  ${Qt5Charts_INCLUDE_DIRS}
  ${Qt5_INCLUDE_DIRS}
  ${YAML_CPP_INCLUDE_DIRS}
)

## Declare a C++ library
add_library(${PROJECT_NAME}
   src/2d_projection.cpp 
   src/catenary.cpp
   src/catenary_checker.cpp 
   src/obstacle_2d.cpp 
   src/convex_hull.cpp
   src/parabola.cpp
   src/catenary_checker_manager.cpp
   src/bisection_catenary_3D.cpp
   src/catenary_checker_node.cpp 
   src/catenary_checker_manager_node.cpp
   src/preprocessed_scenario.cpp
   src/scenario.cpp
   src/solve_parabola_parameter.cpp
   src/solve_catenary_parameter.cpp
   src/solve_parabola_correction_parameter.cpp
   src/solve_catenary_correction_parameter.cpp
  #  src/check_collision_path_planner.cpp
)
target_compile_options(${PROJECT_NAME} PRIVATE ${OpenMP_FLAGS})
target_link_libraries(${PROJECT_NAME}
   ${EXTERNAL_LIBS}
   ${catkin_LIBRARIES}
   ${YAML_CPP_LIBRARIES}
   Ceres::ceres
   ${CERES_LIBRARIES}
   ${OpenMP_LIBS}
)

## Add cmake target dependencies of the library
## as an example, code may need to be generated before libraries
## either from message generation or dynamic reconfigure
# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Declare a C++ executable
## With catkin_make all packages are built within a single CMake context
## The recommended prefix ensures that target names across packages don't collide

add_executable(${PROJECT_NAME}_node src/catenary_checker_node.cpp )
add_executable(test_catenary_checker src/test_catenary_checker.cpp)
add_executable(test_preprocessed_scenario src/test_preprocessed_scenario.cpp)
add_executable(test_scenario src/test_scenario.cpp)
add_executable(catenary_checker_manager_node src/catenary_checker_manager_node.cpp)

# add_executable(catenary_checker_manager_node src/catenary_checker_manager_node.cpp src/catenary_checker_manager.cpp)
add_executable(test_ensuring_collision_free_catenary src/test_ensuring_collision_free_catenary.cpp)
target_link_libraries(test_ensuring_collision_free_catenary ${catkin_LIBRARIES} ceres)
add_executable(test_catenary_fit src/test_catenary_fit.cpp)
target_link_libraries(test_catenary_fit ${PROJECT_NAME} dbscan_line ${catkin_LIBRARIES} ceres Qt5::Charts Qt5::Widgets)

## Rename C++ executable without prefix
## The above recommended prefix causes long target names, the following renames the
## target back to the shorter version for ease of user use
## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")

## Add cmake target dependencies of the executable
## same as for the library above
# add_dependencies(${PROJECT_NAME}_node  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
add_dependencies(test_catenary_checker ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME})
add_dependencies(test_preprocessed_scenario ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME})
add_dependencies(test_scenario ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME})
add_dependencies(${PROJECT_NAME}_manager_node  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Specify libraries to link a library or executable target against
target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES}
    ${PROJECT_NAME}
    Qt5::Charts
    Qt5::Widgets
    dbscan_line
    ${EXTERNAL_LIBRARIES}    
    )
target_link_libraries(test_catenary_checker
   ${PROJECT_NAME}
   ${catkin_LIBRARIES}
   dbscan_line
   Qt5::Charts
   Qt5::Widgets
   ${EXTERNAL_LIBRARIES}   
   Ceres::ceres
   ${CERES_LIBRARIES} 
   )
target_link_libraries(test_preprocessed_scenario
   ${PROJECT_NAME}
   ${catkin_LIBRARIES}
   dbscan_line
   Qt5::Charts
   Qt5::Widgets
   ${EXTERNAL_LIBRARIES}   
   )

   target_link_libraries(test_scenario
   ${PROJECT_NAME}
   ${catkin_LIBRARIES}
   dbscan_line
   Qt5::Charts
   Qt5::Widgets
   ${EXTERNAL_LIBRARIES}   
   )


target_link_libraries(catenary_checker_manager_node
   ${catkin_LIBRARIES}
   ${PROJECT_NAME}
   Qt5::Charts
   Qt5::Widgets
   dbscan_line
   ${EXTERNAL_LIBRARIES}
    )

add_executable(create_grid3d_node src/create_grid3d_node.cpp) 
target_link_libraries(create_grid3d_node
${PROJECT_NAME}
${catkin_LIBRARIES}
dbscan_line
Qt5::Charts
Qt5::Widgets
${EXTERNAL_LIBRARIES}
)

# add_executable(create_grid3d_node src/create_grid3d_node.cpp) 
# target_link_libraries(create_grid3d_node ${PROJECT_NAME})

#############
## Install ##
#############

# all install targets should use catkin DESTINATION variables
# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html

## Mark executable scripts (Python etc.) for installation
## in contrast to setup.py, you can choose the destination
# catkin_install_python(PROGRAMS
#   scripts/my_python_script
#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark executables for installation
## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
# install(TARGETS ${PROJECT_NAME}_node
#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark libraries for installation
## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
# install(TARGETS ${PROJECT_NAME}
#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
# )

## Mark cpp header files for installation
# install(DIRECTORY include/${PROJECT_NAME}/
#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
#   FILES_MATCHING PATTERN "*.h*"
#   PATTERN ".svn" EXCLUDE
# )

## Mark other files for installation (e.g. launch and bag files, etc.)
# install(FILES
#   # myfile1
#   # myfile2
#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
# )

#############
## Testing ##
#############

## Add gtest based cpp test target and link libraries
# catkin_add_gtest(${PROJECT_NAME}-test test/test_catenary_checker.cpp)
# if(TARGET ${PROJECT_NAME}-test)
#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
# endif()

## Add folders to be run by python nosetests
# catkin_add_nosetests(test)
